--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/seuksavanh.png" alt="A picture of me"></td>
+      <td><img src="cv/seuksavanh.png" alt="A picture of me"></td>
       <td>
         <h1>Seuksavanh Vongsipraseuth</h1>
         <p><em>Web developer student at <strong><a href="https://www.udemy.com">Udemy</a></strong></em></p>
